Fixed text bottom align

--- a/Music/EarTraining/Style.css
+++ b/Music/EarTraining/Style.css
@@ -63,7 +63,7 @@ button {
     float: left;
     text-align: left;
     position: absolute;
-    top: 83.5vh;
+    bottom: -0.5em;
     left: 1vw;
 }
 
@@ -71,7 +71,7 @@ button {
     float: right;
     text-align: right;
     position: absolute;
-    top: 91vh;
+    bottom: -0.5em;
     right: 1vw;
 }
 
